app/src/main/java/com/example/it2_project/ErrorPage.java
package com.example.it2_project;

import android.support.v7.app.AppCompatActivity;
import android.os.Bundle;

// error page code
// error
public class ErrorPage extends AppCompatActivity {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_error_page);
    }
}
